# Intelligent-Markruk

./: .gitignore
Open-Chess-main/: .gitignore  OpenChess.ino  README.md  arduino_secrets.h  arduino_secrets_template.h  board_driver.cpp  board_driver.h  chess_bot.cpp  chess_bot.h  chess_engine.cpp  chess_engine.h  chess_moves.cpp  chess_moves.h  sensor_test.cpp  sensor_test.h  stockfish_settings.h  wifi_manager.cpp  wifi_manager.h  wifi_manager_rp2040.cpp  wifi_manager_rp2040.h
Open-Chess-main/Chess/: Chess.ino
Open-Chess-main/Sensor_Test/: Sensor_Test.ino
Open-Chess-main/emulator_project/: CMakeLists.txt  README.md
Open-Chess-main/emulator_project/emulator/: CMakeLists.txt
Open-Chess-main/emulator_project/emulator/src/: ChessBoardWidget.cpp  ChessBoardWidget.h  MainWindow.cpp  MainWindow.h  TcpServer.cpp  TcpServer.h  main.cpp
Open-Chess-main/emulator_project/firmware_host/: CMakeLists.txt
Open-Chess-main/emulator_project/firmware_host/include/: Adafruit_NeoPixel.h  Arduino.h  WString.h  WiFiNINA.h  WiFiSSLClient.h
Open-Chess-main/emulator_project/firmware_host/src/: OpenChess.ino  board_driver_mock.cpp  main_pc.cpp
Open-Chess-main/emulator_project/tests/: run_headless_tests.py  scenarios.json
OpenChess-PCB/: bom.csv  designators.csv  netlist.ipc  positions.csv
OpenChess-PCB/Chess_board2/: Chess_board2-B_Cu.gbl  Chess_board2-B_Mask.gbs  Chess_board2-B_Paste.gbp  Chess_board2-B_Silkscreen.gbo  Chess_board2-Edge_Cuts.gm1  Chess_board2-F_Cu.gtl  Chess_board2-F_Mask.gts  Chess_board2-F_Paste.gtp  Chess_board2-F_Silkscreen.gto  Chess_board2-NPTH-drl_map.gbr  Chess_board2-NPTH.drl  Chess_board2-PTH-drl_map.gbr  Chess_board2-PTH.drl
